# Polypedilum_vanderplanki_2

./: 19c15301_Proteome_yusurika_data_2019 working.xlsx  2_times_changed_genes.xlsx  5_times_changed_genes.xlsx  PV_proteome.R  anno_file.txt  chr_file.txt  chr_file1.txt  csv  file_show (1).xlsx  gsea.xlsx  gsea_coursework.R  kegg_definitions_list.RData  kegg_definitions_list_transcripts.RData  main.R  main.py  proteome_hdamion.r  proteome_meaningful.xlsx  pyproject.toml  vis_chr.R
.Rproj.user/: persistent-state
.Rproj.user/0F6D1123/: persistent-state
.Rproj.user/0F6D1123/pcs/: windowlayoutstate.pper
.Rproj.user/0F6D1123/sources/prop/: 61425513  E190AB06  EB42A598  INDEX
.Rproj.user/0F6D1123/sources/s-1b126851/: 01122BA7-contents  0FA0BFAB-contents  244C2B79-contents  25957E7B-contents  2ABE6D66-contents  9329FC19-contents  9DFF1E95-contents  A374743F-contents  CEB35E32-contents  DC7CB385  DC7CB385-contents  EC8B96FD  FC30F4E1
.Rproj.user/pcs/: windowlayoutstate.pper
.Rproj.user/shared/notebooks/: paths
